--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -12,7 +12,7 @@
 	"browser_action": {
 		"default_icon": "icons/icon-32.png",
 		"default_title": "Simon",
-		"default_popup": "game/index.html"
+		"default_popup": "game/popup.html"
 	},
 	
 	"background": {
